force-app/main/default/objects/NotificationCollection__x/NotificationCollection__x.object-meta.xml
<CustomObject>
    <description>NotificationCollection</description>
    <externalDataSource>SAP</externalDataSource>
    <externalName>NotificationCollection</externalName>
    <label>NotificationCollection</label>
    <pluralLabel>NotificationCollection</pluralLabel>
</CustomObject>