force-app/main/default/objects/NotificationCollection__x/fields/entriesOfInterest__c.field-meta.xml
<CustomField>
    <fullName>entriesOfInterest__c</fullName>
    <description>entriesOfInterest</description>
    <externalDeveloperName>entriesOfInterest</externalDeveloperName>
    <label>entriesOfInterest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>