force-app/main/default/objects/NotificationCollection__x/fields/recipient__c.field-meta.xml
<CustomField>
    <fullName>recipient__c</fullName>
    <description>recipient</description>
    <externalDeveloperName>recipient</externalDeveloperName>
    <label>recipient</label>
    <length>112</length>
    <type>Text</type>
</CustomField>